--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -1,4 +1,10 @@
 .header
+  position: fixed
+  padding-top: 100px
+  left: 0
+  top: 0
+  width: 100%
+  z-index: 99
   background-color: $dark
   padding: 24px 0
 .menu
@@ -12,6 +18,7 @@
   &__item
     text-decoration: 
     color: $light
+    text-decoration: none
     text-transform: uppercase
     margin-right: 40px
 .phone
