--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -12,17 +12,16 @@
   justify-content: space-between
   align-items: center
 .logo
-  color: $primery
+  color: $primary
   text-transform: uppercase
 .nav
   &__item
-    text-decoration: 
-    color: $light
     text-decoration: none
+    color: $light
     text-transform: uppercase
     margin-right: 40px
 .phone
-  color: $primery
+  color: $primary
 .contacts
   &__phone
     margin-right: 45px
