--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -2,21 +2,23 @@
   position: relative
   display: flex
   flex-direction: column
+  justify-content: space-between
+  align-items: flex-start
   padding-top: 100px
   background: $dark url('../img/hero-bg.jpg') no-repeat center / cover
   height: 100vh
   color: $light
+  &__content
+    max-width: 670px
+  &__text
+    font-size: 22px
+    max-width: 500px
   &__instagram
     position: absolute
     left: 0
     top: 0
     max-width: 80px
     height: 100%
-.instagram
-  display: flex
-  justify-content: center
-  align-items: center
-  background-color: $dark
   &__scroll-down
     position: absolute
     display: flex
@@ -26,15 +28,24 @@
     bottom: 0
     min-width: 247px
     min-height: 97px
-    background-color: #dark
+    background-color: $dark
     text-transform: uppercase
     text-decoration: none
     color: $light
-
+.instagram
+  display: flex
+  justify-content: center
+  align-items: center
+  background-color: $dark
   &__link
     text-transform: uppercase
     text-decoration: none
-    color: $primery
+    color: $primary
     transform: rotate(90deg)
 .title
   margin: 0
+  font-family: 'Yeseva One', cursive
+  text-transform: uppercase
+  font-size: 40px
+  &--primary
+    color: $primary
